Bug Fixes and New Features
Bug Fixes:
-Fixed visual bug where the video displayed and control bar overlapped
-Fixed visual bug where if the title and channel was too long it would appear on 2 lines
-Fixed visual ug where the gray highlight of a search result wouldn't disappear after adding it to a playlist
-Fixed bug where when shuffle play is toggled on, the play button would bug out when it is manually selected
-Fixed bug where results weren't being cleared when doing multiple searches

Functionality Additions:
-Added the ability to press enter to create playlist/finish editing a playlist/video
-Can now play a video by pressing anywhere on the video's bar instead of only on the play button
-Can now click outside of a modal to close it instead of clicking the button again
-Can now adjust the time of the video using a slider
Misc:
-When a video is playlist and the user is switching between playlists, the video is no longer hidden

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,7 +65,7 @@
   left: 50px;
   text-align: left;
   overflow: hidden;
-  height: 20px;
+  height: 16px;
 }
 
 .videoList.channelContainer{
@@ -73,6 +73,7 @@
   top: 0;
   left: 300px;
   text-align: left;
+  height: 16px;
   overflow: hidden;
 }
 
@@ -226,6 +227,7 @@
   top: 25px;
   left: 10px;
   display: none;
+  z-index: 100;
   box-shadow: 0px 0px 30px #888888;
 }
 
@@ -233,6 +235,7 @@
   font-size: 20px;
   width: 20px;
   height: 20px;
+  z-index: 100;
   border: none;
 }
 
@@ -346,7 +349,7 @@
 .video-container{
   position: absolute;
   top: 240px;
-  height: 307px;
+  height: 290px;
   width: 420px;
   overflow: hidden;
 }
@@ -354,7 +357,7 @@
 .videos{
   position: absolute;
   width: 420px;
-  height: 275px;
+  height: 265px;
   overflow-x: hidden;
   overflow-y: scroll;
   padding-right: 20px;
@@ -435,7 +438,7 @@
 }
 
 .control-time{
-  bottom: 0;
+  bottom: 10px;
   left: 115px;
   position: absolute;
   width: 225px;
@@ -443,7 +446,6 @@
 }
 
 .control-time-bar-container{
-  border: 1px solid lightgray;
   width: 145px;
   height: 3px;
   position: absolute;
@@ -457,7 +459,7 @@
 }
 
 .control-time-curr{
-  line-height: 90%;
+
   position: absolute;
   width: 35px;
   height: inherit;
@@ -465,7 +467,7 @@
 }
 
 .control-time-end{
-  line-height: 90%;
+
   position: absolute;
   width: 35px;
   height: inherit;
@@ -530,6 +532,28 @@
 
 .small-font{
   font-size: 16px;
+}
+
+.slider{
+  -webkit-appearance: none;
+  width: 100%;
+  height: 5px;
+  border-radius: 5px;
+  background: lightgray;
+  outline: none;
+  opacity: .7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb{
+  -webkit-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: lightgreen;
+  cursor: pointer;
 }
 
 .tiny-font{ 
